# pygodide

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: config.yml  conversion-failure.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: .gitignore  README.md  run.py
benchmarks/perf_benchmark/: __init__.py  browser.py  browser_launch.py  chart.py  config.py  local.py  metadata.py  models.py  parse.py  serve.py  workspace.py
benchmarks/results/: latest.json
docs/: auto-asyncification-plan.md  benchmark.md  cli.md  index.md  instructions.md
docs/assets/: benchmark-chart.html
docs/styles/: overrides.css
pygodide/: __init__.py  app_builder.py  asyncify.py  build_logging.py  building.py  compatibility.py  logs.py  packaging.py  project_config.py  pyproject.py  rendering.py  serving.py
pygodide/asyncify/: __init__.py  analyze.py  ast_utils.py  config.py  constants.py  models.py  transform.py  warnings.py
pygodide/builder/: __init__.py  display_size.py  pipeline.py  plan.py  zip.py
pygodide/cli/: commands.py  main.py  runners.py
pygodide/dep_handling/: __init__.py  collection.py  common.py  pyodide_resolution.py
pygodide/smoke/: __init__.py  manifest.py  playwright_smoke.py  runner.py  types.py
pygodide/templates/: boot.js  index.html  startup.py.j2
scripts/: smoke
test_targets/: README.md
test_targets/asset_maze/: main.py  pyproject.toml  testing_manifest.yaml
test_targets/asset_maze/data/configs/: waves.json
test_targets/asset_maze/data/strings/: title.txt
test_targets/asset_maze/game/: app.py
test_targets/asset_maze/game/loaders/: __init__.py  audio.py  data.py  sprites.py  vendor_audio.py
test_targets/async_hang/: main.py  testing_manifest.yaml
test_targets/audio_mixing/: main.py
test_targets/ball_bouncing/: ball.py  main.py  testing_manifest.yaml
test_targets/ball_bouncing/src/: ball.py  main.py
test_targets/mixer_sounds/: CREDITS.txt  main.py  testing_manifest.yaml
test_targets/not_async/: main.py  testing_manifest.yaml
test_targets/numpy_particles/: main.py  pyproject.toml  testing_manifest.yaml
test_targets/numpy_particles/src/: main.py  pyproject.toml
test_targets/perf_bench/: benchmark.py  entities.py  main.py  testing_manifest.yaml
test_targets/save_slots/: main.py  testing_manifest.yaml
test_targets/sync_event_pump/: main.py  testing_manifest.yaml
test_targets/sync_flip_loop/: main.py  testing_manifest.yaml
test_targets/sync_helper_loop/: main.py  testing_manifest.yaml
test_targets/sync_running_loop/: main.py  testing_manifest.yaml
test_targets/web_runtime/: main.py  testing_manifest.yaml
tests/: test_asyncify.py  test_auto_async_config.py  test_cli.py  test_compatibility.py  test_display_size.py  test_packaging.py  test_project_config.py  test_pyodide_resolution.py  test_smoke.py
