[project]
name = "pygodide"
version = "0.1.0b3"
description = "Modern replacement for pygbag that leverages pyodide for running Pygame in the web"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ethan Anderson", email = "telan4892@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.6",
    "pygame-ce",
    "typer>=0.26.7",
    "packaging>=23.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "hatchling>=1.17.0",
    "playwright>=1.57.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.18",
    "numpy>=2.4.0",
    "zensical>=0.0.46",
]

[project.urls]
Homepage = "https://github.com/Elan456/pygodide"
Repository = "https://github.com/Elan456/pygodide.git"

[project.scripts]
pygodide = "pygodide.cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pygodide"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
