[project]
name = "pygodide"
version = "0.1.0b5"
description = "Turn Pygame projects into browser apps with Pyodide"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ethan Anderson", email = "telan4892@gmail.com" }
]
keywords = [
    "pygame",
    "pygame-ce",
    "pyodide",
    "wasm",
    "webassembly",
    "browser",
    "game",
    "gamedev",
    "web",
    "html5",
    "cli",
    "build-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.26.7",
    "packaging>=23.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "hatchling>=1.17.0",
    "plotly>=6.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.18",
    "numpy>=2.4.0",
    "zensical>=0.0.46",
    "pygbag",
    "mkdocs-typer2[zensical]>=0.4.1",
    "pygame-ce",
    "pygodide[smoke]"
]

[project.optional-dependencies]
smoke = ["playwright>=1.57.0"]

[project.urls]
Homepage = "https://github.com/Elan456/pygodide"
Repository = "https://github.com/Elan456/pygodide.git"

[project.scripts]
pygodide = "pygodide.cli.main:app"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pygodide"]

# Ship docs-site artwork with the package (docs/ is the source of truth).
[tool.hatch.build.targets.wheel.force-include]
"docs/assets/images/favicon.svg" = "pygodide/templates/favicon.svg"
"docs/assets/images/pygodide-logo.svg" = "pygodide/templates/pygodide-logo.svg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
